versions/0.8.1/_sources/refs/_aws-cdk_aws-redshift.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"RSn0mkyc7DsS5hZ059b7VYJIqqJjB68j+D9uPVRWVHQ="}

@aws-cdk/aws-redshift
=====================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/redshift/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:redshift:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="redshift" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>redshift</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:redshift:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='redshift', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-redshift/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-redshift@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-redshift": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-redshift@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-redshift/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-redshift@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-redshift": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-redshift@0.8.1



.. mdinclude:: ./__aws-cdk_aws-redshift.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-redshift

ClusterEndpointAddress
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ClusterEndpointAddress([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.redshift.ClusterEndpointAddress;

      .. code-tab:: javascript

         const { ClusterEndpointAddress } = require('@aws-cdk/aws-redshift');

      .. code-tab:: typescript

         import { ClusterEndpointAddress } from '@aws-cdk/aws-redshift';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ClusterEndpointPort
^^^^^^^^^^^^^^^^^^^

.. py:class:: ClusterEndpointPort([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.redshift.ClusterEndpointPort;

      .. code-tab:: javascript

         const { ClusterEndpointPort } = require('@aws-cdk/aws-redshift');

      .. code-tab:: typescript

         import { ClusterEndpointPort } from '@aws-cdk/aws-redshift';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-redshift.cloudformation

ClusterParameterGroupResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ClusterParameterGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.redshift.cloudformation.ClusterParameterGroupResource;

      .. code-tab:: javascript

         const { cloudformation.ClusterParameterGroupResource } = require('@aws-cdk/aws-redshift');

      .. code-tab:: typescript

         import { cloudformation.ClusterParameterGroupResource } from '@aws-cdk/aws-redshift';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ClusterParameterGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ClusterParameterGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-redshift.cloudformation.ClusterParameterGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ParameterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.redshift.cloudformation.ClusterParameterGroupResource.ParameterProperty;

         .. code-tab:: javascript

            // cloudformation.ClusterParameterGroupResource.ParameterProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ClusterParameterGroupResource.ParameterProperty } from '@aws-cdk/aws-redshift';





      .. py:attribute:: parameterName

         ``ClusterParameterGroupResource.ParameterProperty.ParameterName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-property-redshift-clusterparametergroup-parameter.html#cfn-redshift-clusterparametergroup-parameter-parametername


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: parameterValue

         ``ClusterParameterGroupResource.ParameterProperty.ParameterValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-property-redshift-clusterparametergroup-parameter.html#cfn-redshift-clusterparametergroup-parameter-parametervalue


         :type: string or :py:class:`@aws-cdk/cdk.Token`



ClusterParameterGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ClusterParameterGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.redshift.cloudformation.ClusterParameterGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.ClusterParameterGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ClusterParameterGroupResourceProps } from '@aws-cdk/aws-redshift';





   .. py:attribute:: description

      ``AWS::Redshift::ClusterParameterGroup.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-clusterparametergroup.html#cfn-redshift-clusterparametergroup-description


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: parameterGroupFamily

      ``AWS::Redshift::ClusterParameterGroup.ParameterGroupFamily``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-clusterparametergroup.html#cfn-redshift-clusterparametergroup-parametergroupfamily


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: parameters

      ``AWS::Redshift::ClusterParameterGroup.Parameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-clusterparametergroup.html#cfn-redshift-clusterparametergroup-parameters


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-redshift.cloudformation.ClusterParameterGroupResource.ParameterProperty` or undefined


   .. py:attribute:: tags

      ``AWS::Redshift::ClusterParameterGroup.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-clusterparametergroup.html#cfn-redshift-clusterparametergroup-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


ClusterResource
~~~~~~~~~~~~~~~

.. py:class:: ClusterResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.redshift.cloudformation.ClusterResource;

      .. code-tab:: javascript

         const { cloudformation.ClusterResource } = require('@aws-cdk/aws-redshift');

      .. code-tab:: typescript

         import { cloudformation.ClusterResource } from '@aws-cdk/aws-redshift';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ClusterResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ClusterResource``
   :type properties: :py:class:`~@aws-cdk/aws-redshift.cloudformation.ClusterResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: clusterEndpointAddress

      :type: :py:class:`~@aws-cdk/aws-redshift.ClusterEndpointAddress` *(readonly)*


   .. py:attribute:: clusterEndpointPort

      :type: :py:class:`~@aws-cdk/aws-redshift.ClusterEndpointPort` *(readonly)*

   .. py:class:: LoggingPropertiesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.redshift.cloudformation.ClusterResource.LoggingPropertiesProperty;

         .. code-tab:: javascript

            // cloudformation.ClusterResource.LoggingPropertiesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ClusterResource.LoggingPropertiesProperty } from '@aws-cdk/aws-redshift';





      .. py:attribute:: bucketName

         ``ClusterResource.LoggingPropertiesProperty.BucketName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-redshift-cluster-loggingproperties.html#cfn-redshift-cluster-loggingproperties-bucketname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: s3KeyPrefix

         ``ClusterResource.LoggingPropertiesProperty.S3KeyPrefix``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-redshift-cluster-loggingproperties.html#cfn-redshift-cluster-loggingproperties-s3keyprefix


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



ClusterResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ClusterResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.redshift.cloudformation.ClusterResourceProps;

      .. code-tab:: javascript

         // cloudformation.ClusterResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ClusterResourceProps } from '@aws-cdk/aws-redshift';





   .. py:attribute:: clusterType

      ``AWS::Redshift::Cluster.ClusterType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-clustertype


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: dbName

      ``AWS::Redshift::Cluster.DBName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-dbname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: masterUsername

      ``AWS::Redshift::Cluster.MasterUsername``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-masterusername


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: masterUserPassword

      ``AWS::Redshift::Cluster.MasterUserPassword``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-masteruserpassword


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: nodeType

      ``AWS::Redshift::Cluster.NodeType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-nodetype


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: allowVersionUpgrade

      ``AWS::Redshift::Cluster.AllowVersionUpgrade``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-allowversionupgrade


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: automatedSnapshotRetentionPeriod

      ``AWS::Redshift::Cluster.AutomatedSnapshotRetentionPeriod``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-automatedsnapshotretentionperiod


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: availabilityZone

      ``AWS::Redshift::Cluster.AvailabilityZone``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-availabilityzone


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: clusterIdentifier

      ``AWS::Redshift::Cluster.ClusterIdentifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-clusteridentifier


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: clusterParameterGroupName

      ``AWS::Redshift::Cluster.ClusterParameterGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-clusterparametergroupname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: clusterSecurityGroups

      ``AWS::Redshift::Cluster.ClusterSecurityGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-clustersecuritygroups


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: clusterSubnetGroupName

      ``AWS::Redshift::Cluster.ClusterSubnetGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-clustersubnetgroupname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: clusterVersion

      ``AWS::Redshift::Cluster.ClusterVersion``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-clusterversion


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: elasticIp

      ``AWS::Redshift::Cluster.ElasticIp``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-elasticip


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: encrypted

      ``AWS::Redshift::Cluster.Encrypted``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-encrypted


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: hsmClientCertificateIdentifier

      ``AWS::Redshift::Cluster.HsmClientCertificateIdentifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-hsmclientcertidentifier


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: hsmConfigurationIdentifier

      ``AWS::Redshift::Cluster.HsmConfigurationIdentifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-HsmConfigurationIdentifier


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: iamRoles

      ``AWS::Redshift::Cluster.IamRoles``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-iamroles


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: kmsKeyId

      ``AWS::Redshift::Cluster.KmsKeyId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-kmskeyid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: loggingProperties

      ``AWS::Redshift::Cluster.LoggingProperties``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-loggingproperties


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-redshift.cloudformation.ClusterResource.LoggingPropertiesProperty` or undefined


   .. py:attribute:: numberOfNodes

      ``AWS::Redshift::Cluster.NumberOfNodes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-nodetype


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: ownerAccount

      ``AWS::Redshift::Cluster.OwnerAccount``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-owneraccount


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: port

      ``AWS::Redshift::Cluster.Port``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-port


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: preferredMaintenanceWindow

      ``AWS::Redshift::Cluster.PreferredMaintenanceWindow``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-preferredmaintenancewindow


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: publiclyAccessible

      ``AWS::Redshift::Cluster.PubliclyAccessible``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-publiclyaccessible


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: snapshotClusterIdentifier

      ``AWS::Redshift::Cluster.SnapshotClusterIdentifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-snapshotclusteridentifier


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: snapshotIdentifier

      ``AWS::Redshift::Cluster.SnapshotIdentifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-snapshotidentifier


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::Redshift::Cluster.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


   .. py:attribute:: vpcSecurityGroupIds

      ``AWS::Redshift::Cluster.VpcSecurityGroupIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-cluster.html#cfn-redshift-cluster-vpcsecuritygroupids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


ClusterSecurityGroupIngressResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ClusterSecurityGroupIngressResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.redshift.cloudformation.ClusterSecurityGroupIngressResource;

      .. code-tab:: javascript

         const { cloudformation.ClusterSecurityGroupIngressResource } = require('@aws-cdk/aws-redshift');

      .. code-tab:: typescript

         import { cloudformation.ClusterSecurityGroupIngressResource } from '@aws-cdk/aws-redshift';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ClusterSecurityGroupIngressResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ClusterSecurityGroupIngressResource``
   :type properties: :py:class:`~@aws-cdk/aws-redshift.cloudformation.ClusterSecurityGroupIngressResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ClusterSecurityGroupIngressResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ClusterSecurityGroupIngressResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.redshift.cloudformation.ClusterSecurityGroupIngressResourceProps;

      .. code-tab:: javascript

         // cloudformation.ClusterSecurityGroupIngressResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ClusterSecurityGroupIngressResourceProps } from '@aws-cdk/aws-redshift';





   .. py:attribute:: clusterSecurityGroupName

      ``AWS::Redshift::ClusterSecurityGroupIngress.ClusterSecurityGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-clustersecuritygroupingress.html#cfn-redshift-clustersecuritygroupingress-clustersecuritygroupname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: cidrip

      ``AWS::Redshift::ClusterSecurityGroupIngress.CIDRIP``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-clustersecuritygroupingress.html#cfn-redshift-clustersecuritygroupingress-cidrip


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: ec2SecurityGroupName

      ``AWS::Redshift::ClusterSecurityGroupIngress.EC2SecurityGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-clustersecuritygroupingress.html#cfn-redshift-clustersecuritygroupingress-ec2securitygroupname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: ec2SecurityGroupOwnerId

      ``AWS::Redshift::ClusterSecurityGroupIngress.EC2SecurityGroupOwnerId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-clustersecuritygroupingress.html#cfn-redshift-clustersecuritygroupingress-ec2securitygroupownerid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


ClusterSecurityGroupResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ClusterSecurityGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.redshift.cloudformation.ClusterSecurityGroupResource;

      .. code-tab:: javascript

         const { cloudformation.ClusterSecurityGroupResource } = require('@aws-cdk/aws-redshift');

      .. code-tab:: typescript

         import { cloudformation.ClusterSecurityGroupResource } from '@aws-cdk/aws-redshift';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ClusterSecurityGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ClusterSecurityGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-redshift.cloudformation.ClusterSecurityGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ClusterSecurityGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ClusterSecurityGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.redshift.cloudformation.ClusterSecurityGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.ClusterSecurityGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ClusterSecurityGroupResourceProps } from '@aws-cdk/aws-redshift';





   .. py:attribute:: description

      ``AWS::Redshift::ClusterSecurityGroup.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-clustersecuritygroup.html#cfn-redshift-clustersecuritygroup-description


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: tags

      ``AWS::Redshift::ClusterSecurityGroup.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-clustersecuritygroup.html#cfn-redshift-clustersecuritygroup-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


ClusterSubnetGroupResource
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ClusterSubnetGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.redshift.cloudformation.ClusterSubnetGroupResource;

      .. code-tab:: javascript

         const { cloudformation.ClusterSubnetGroupResource } = require('@aws-cdk/aws-redshift');

      .. code-tab:: typescript

         import { cloudformation.ClusterSubnetGroupResource } from '@aws-cdk/aws-redshift';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ClusterSubnetGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ClusterSubnetGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-redshift.cloudformation.ClusterSubnetGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ClusterSubnetGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ClusterSubnetGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.redshift.cloudformation.ClusterSubnetGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.ClusterSubnetGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ClusterSubnetGroupResourceProps } from '@aws-cdk/aws-redshift';





   .. py:attribute:: description

      ``AWS::Redshift::ClusterSubnetGroup.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-clustersubnetgroup.html#cfn-redshift-clustersubnetgroup-description


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: subnetIds

      ``AWS::Redshift::ClusterSubnetGroup.SubnetIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-clustersubnetgroup.html#cfn-redshift-clustersubnetgroup-subnetids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: tags

      ``AWS::Redshift::ClusterSubnetGroup.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-redshift-clustersubnetgroup.html#cfn-redshift-clustersubnetgroup-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined



.. py:currentmodule:: @aws-cdk/aws-redshift

